--- a/myinit.org
+++ b/myinit.org
@@ -68,14 +68,29 @@
 #+END_SRC
 * org
 #+BEGIN_SRC emacs-lisp
+  (use-package org-plus-contrib
+    :ensure t)
+
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((python . t)))
+
   (use-package org-bullets
     :ensure t
     :config
     (add-hook 'org-mode-hook
-              (lambda ()
-                (org-bullets-mode t))))
+	      (lambda ()
+		(org-bullets-mode t))))
   (setq org-src-fontify-natively t)
   (prettify-symbols-mode)
+  (use-package ox-reveal
+    :ensure t)
+
+  (setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
+  (setq org-reveal-mathjax t)
+
+  (use-package htmlize
+    :ensure t)
 #+END_SRC
 * Programming
 ** c
@@ -118,11 +133,14 @@
   #+END_SRC
 ** Haskell
   #+BEGIN_SRC emacs-lisp
-     (use-package haskell-mode
-       :ensure t)
-     (use-package company-ghci
-       :ensure t
-       :config (add-to-list 'company-backends 'company-ghci))
+    (use-package haskell-mode
+      :ensure t)
+    (use-package company-ghc
+      :ensure t
+      :config (add-to-list 'company-backends 'company-ghc))
+    (use-package company-ghci
+      :ensure t
+      :config (add-to-list 'company-backends 'company-ghci))
    #+END_SRC
 ** general
    iedit
