--- a/myinit.org
+++ b/myinit.org
@@ -141,6 +141,7 @@
       (add-to-list 'company-backends '(company-ghc :with company-dabbrev-code))
       (autoload 'ghc-init "ghc" nil t)
       (autoload 'ghc-debug "ghc" nil t)
+      (ghc-toggle-check-command)
       (add-hook 'haskell-mode-hook (lambda () (ghc-init)
 				     (flycheck-mode -1))))
     (use-package company-ghci
