fixed delte trailing whitespace to only do it in prog-mode

--- a/myinit.org
+++ b/myinit.org
@@ -178,7 +178,11 @@
    #+END_SRC
    To delete trailing whitespace
    #+BEGIN_SRC emacs-lisp
-     (add-hook 'before-save-hook 'delete-trailing-whitespace)
+     (add-hook 'before-save-hook 'my-prog-nuke-trailing-whitespace)
+
+     (defun my-prog-nuke-trailing-whitespace ()
+       (when (derived-mode-p 'prog-mode)
+	 (delete-trailing-whitespace)))
    #+END_SRC
 * swiper/ivy
 #+BEGIN_SRC emacs-lisp
