--- a/myinit.org
+++ b/myinit.org
@@ -21,8 +21,6 @@
   (setq ring-bell-function
         (lambda () nil))
 
-  (set-face-attribute 'region nil
-                      :background "#3c4447")
   (global-unset-key (kbd "C-z"))
   (setq-default indent-tabs-mode nil)
 #+END_SRC
@@ -173,7 +171,10 @@ language stuff
       :ensure t
       :config
       (setq inferior-lisp-program "/bin/sbcl")
-      (setq slime-contribs '(slime-fancy)))
+      (setq slime-contribs '(slime-fancy))
+      (add-hook 'slime-repl-mode-hook (lambda ()
+                                        (define-key slime-repl-mode-map
+                                          (read-kbd-macro paredit-backward-delete-key) nil))))
   #+END_SRC
 ** Haskell
   #+BEGIN_SRC emacs-lisp
