--- a/myinit.org
+++ b/myinit.org
@@ -29,9 +29,9 @@
 #+END_SRC
 * backups
 #+BEGIN_SRC emacs-lisp
-  (setq backup-directory-alist '(("." . "~/.saves")))
-  (setq backup-by-copying t)
-  (setq delete-old-versions t
+  (setq backup-directory-alist '(("." . "~/.saves"))
+        backup-by-copying t
+        delete-old-versions t
         kept-new-versions 3
         kept-old-versions 1
         version-control t)
